Kludge around lack of gettid(2) syscall on various systems.

https://bugzilla.gnome.org/show_bug.cgi?id=660177